@@ -23,7 +23,7 @@
 
 /*
  * @test
- * @summary tests for -modulepath
+ * @summary tests for --module-path
  * @library /tools/lib
  * @modules
  *      jdk.compiler/com.sun.tools.javac.api
@@ -62,13 +62,13 @@ public class ModulePathTest extends ModuleTestBase {
 
         String log = new JavacTask(tb, Task.Mode.CMDLINE)
                 .options("-XDrawDiagnostics",
-                        "-modulepath", "doesNotExist")
+                        "--module-path", "doesNotExist")
                 .files(findJavaFiles(src))
                 .run(Task.Expect.FAIL)
                 .writeAll()
                 .getOutput(Task.OutputKind.DIRECT);
 
-        if (!log.contains("- compiler.err.illegal.argument.for.option: -modulepath, doesNotExist"))
+        if (!log.contains("- compiler.err.illegal.argument.for.option: --module-path, doesNotExist"))
             throw new Exception("expected output not found");
     }
 
@@ -80,13 +80,13 @@ public class ModulePathTest extends ModuleTestBase {
 
         String log = new JavacTask(tb, Task.Mode.CMDLINE)
                 .options("-XDrawDiagnostics",
-                        "-modulepath", "dummy.txt")
+                        "--module-path", "dummy.txt")
                 .files(findJavaFiles(src))
                 .run(Task.Expect.FAIL)
                 .writeAll()
                 .getOutput(Task.OutputKind.DIRECT);
 
-        if (!log.contains("- compiler.err.illegal.argument.for.option: -modulepath, dummy.txt"))
+        if (!log.contains("- compiler.err.illegal.argument.for.option: --module-path, dummy.txt"))
             throw new Exception("expected output not found");
     }
 
@@ -98,13 +98,13 @@ public class ModulePathTest extends ModuleTestBase {
 
         String log = new JavacTask(tb, Task.Mode.CMDLINE)
                 .options("-XDrawDiagnostics",
-                        "-modulepath", "dummy.jimage")
+                        "--module-path", "dummy.jimage")
                 .files(findJavaFiles(src))
                 .run(Task.Expect.FAIL)
                 .writeAll()
                 .getOutput(Task.OutputKind.DIRECT);
 
-        if (!log.contains("- compiler.err.illegal.argument.for.option: -modulepath, dummy.jimage"))
+        if (!log.contains("- compiler.err.illegal.argument.for.option: --module-path, dummy.jimage"))
             throw new Exception("expected output not found");
     }
 
@@ -132,7 +132,7 @@ public class ModulePathTest extends ModuleTestBase {
 
         new JavacTask(tb, Task.Mode.CMDLINE)
                 .outdir(classes)
-                .options("-modulepath", modClasses.toString())
+                .options("--module-path", modClasses.toString())
                 .files(findJavaFiles(src))
                 .run()
                 .writeAll();
@@ -153,7 +153,7 @@ public class ModulePathTest extends ModuleTestBase {
         String log = new JavacTask(tb, Task.Mode.CMDLINE)
                 .outdir(classes)
                 .options("-XDrawDiagnostics",
-                        "-modulepath", modClasses.toString())
+                        "--module-path", modClasses.toString())
                 .files(findJavaFiles(src))
                 .run(Task.Expect.FAIL)
                 .writeAll()
@@ -190,7 +190,7 @@ public class ModulePathTest extends ModuleTestBase {
 
         new JavacTask(tb, Task.Mode.CMDLINE)
                 .outdir(classes)
-                .options("-modulepath", moduleJar.toString(), "-addmods", "m1")
+                .options("--module-path", moduleJar.toString(), "--add-modules", "m1")
                 .files(findJavaFiles(src))
                 .run()
                 .writeAll();
@@ -226,7 +226,7 @@ public class ModulePathTest extends ModuleTestBase {
 
         new JavacTask(tb, Task.Mode.CMDLINE)
                 .outdir(classes)
-                .options("-modulepath", moduleJar.toString())
+                .options("--module-path", moduleJar.toString())
                 .files(findJavaFiles(src))
                 .run()
                 .writeAll();
@@ -240,7 +240,7 @@ public class ModulePathTest extends ModuleTestBase {
 
         String log = new JavacTask(tb, Task.Mode.CMDLINE)
                 .options("-XDrawDiagnostics",
-                        "-modulepath", "dummy.jar")
+                        "--module-path", "dummy.jar")
                 .files(findJavaFiles(src))
                 .run(Task.Expect.FAIL)
                 .writeAll()
@@ -277,7 +277,7 @@ public class ModulePathTest extends ModuleTestBase {
 
         new JavacTask(tb, Task.Mode.CMDLINE)
                 .outdir(classes)
-                .options("-modulepath", jmod.toString())
+                .options("--module-path", jmod.toString())
                 .files(findJavaFiles(src))
                 .run()
                 .writeAll();
@@ -291,7 +291,7 @@ public class ModulePathTest extends ModuleTestBase {
 
         String log = new JavacTask(tb, Task.Mode.CMDLINE)
                 .options("-XDrawDiagnostics",
-                        "-modulepath", "dummy.jmod")
+                        "--module-path", "dummy.jmod")
                 .files(findJavaFiles(src))
                 .run(Task.Expect.FAIL)
                 .writeAll()
@@ -311,7 +311,7 @@ public class ModulePathTest extends ModuleTestBase {
 
         new JavacTask(tb, Task.Mode.CMDLINE)
                 .options("-XDrawDiagnostics",
-                        "-modulepath", modules + "/./../modules")
+                        "--module-path", modules + "/./../modules")
                 .files(findJavaFiles(src))
                 .run()
                 .writeAll();
@@ -327,7 +327,7 @@ public class ModulePathTest extends ModuleTestBase {
 
         new JavacTask(tb, Task.Mode.CMDLINE)
                 .options("-XDrawDiagnostics",
-                        "-modulepath", modules + "/./../modules" + PATH_SEP + modules)
+                        "--module-path", modules + "/./../modules" + PATH_SEP + modules)
                 .files(findJavaFiles(src))
                 .run()
                 .writeAll();
@@ -343,8 +343,8 @@ public class ModulePathTest extends ModuleTestBase {
 
         new JavacTask(tb, Task.Mode.CMDLINE)
                 .options("-XDrawDiagnostics",
-                        "-modulepath", modules.toString(),
-                        "-modulepath", modules.toString())
+                        "--module-path", modules.toString(),
+                        "--module-path", modules.toString())
                 .files(findJavaFiles(src))
                 .run()
                 .writeAll();
@@ -370,7 +370,7 @@ public class ModulePathTest extends ModuleTestBase {
 
         new JavacTask(tb, Task.Mode.CMDLINE)
                 .options("-XDrawDiagnostics",
-                        "-modulepath", deepModuleDir + PATH_SEP + modules)
+                        "--module-path", deepModuleDir + PATH_SEP + modules)
                 .files(findJavaFiles(src))
                 .run()
                 .writeAll();
@@ -400,7 +400,7 @@ public class ModulePathTest extends ModuleTestBase {
 
         new JavacTask(tb, Task.Mode.CMDLINE)
                 .options("-XDrawDiagnostics",
-                        "-modulepath", modules.toString())
+                        "--module-path", modules.toString())
                 .files(findJavaFiles(src))
                 .run()
                 .writeAll();
